removed public_html folder, added new section for wedding day info

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -16,6 +16,9 @@
                             <a class="active" href="#save-the-date">Save The Date</a>
                         </li>
                         <li>
+                            <a href="#wedding-day-info">Wedding Day Info</a>
+                        </li>
+                        <li>
                             <a href="#hotels">Hotels</a>
                         </li>
                         <li>
@@ -36,6 +39,8 @@
                             We welcome everyone to join us at 5:00 pm.
                         </p>
                         
+                    </section>
+                    <section id="section-wedding-day-info">
                         <h2>Schedule</h2>
 
                         <dl>
