images and styles for desktop

--- a/assets/html/wedding-day-info.html
+++ b/assets/html/wedding-day-info.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Save The Date | Dan and Christin</title>
+        <title>Wedding Day Info | Dan and Christin</title>
 
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Lato:300,700" rel="stylesheet">
         <link rel="stylesheet" href="/dist/main.css">
     </head>
-    <body class="save-the-date">
+    <body class="wedding-day-info">
         <div class="left">  
 
         </div>
@@ -18,12 +18,13 @@
             <div class="container">
                 <header>
                     <h1>Dan and Christin</h1>
+
                     <ul class="menu">
                         <li>
-                            <a class="active" href="/">Save The Date</a>
+                            <a href="/">Save The Date</a>
                         </li>
                         <li>
-                            <a href="wedding-day-info.html">Wedding Day Info</a>
+                            <a class="active" href="wedding-day-info.html">Wedding Day Info</a>
                         </li>
                         <li>
                             <a href="hotels.html">Hotels</a>
@@ -35,14 +36,30 @@
                     <div class="clearfix"></div>
                 </header>
 
-
                 <div class="left-space"></div>
 
-
                 <main>
-                    <h2>Save the Date</h2>
-                    <h3>May 6th, 2017</h3>
-                    <h4>Woodstock, Illinois</h4>
+                    <h2>Schedule</h2>
+
+                    <dl>
+                        <dt>5:00 PM &ndash; 6:30 PM</dt>
+                        <dd>Cocktails and Appetizers</dd>
+                        <dt>6:30 PM &ndash; 11:30 PM</dt>
+                        <dd>Dinner and Dancing</dd>
+                    </dl>
+
+                    <h2>Attire</h2>
+                    <p>
+                        Due to the location, we do not recommend heels for women. 
+                        Jackets are not required for men. Please no jeans, or similar casual wear.
+                    </p>
+
+                    <h2>Please Note</h2>
+
+                    <p>
+                        Due to limited capacity at our venue, our celebration 
+                        will be adults only.
+                    </p>
                 </main>
             </div>
         </div>
@@ -50,3 +67,4 @@
         <script src="/dist/index.js"></script>
     </body>
 </html>
+
