--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,7 +8,7 @@
         <title>Save The Date | Dan and Christin</title>
 
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Lato:300,700" rel="stylesheet">
-        <link rel="stylesheet" href="/dist/main.css">
+        <link rel="stylesheet" href="/dist/main-938ed80c17.css">
     </head>
     <body class="save-the-date">
         <div class="left">  
@@ -47,6 +47,6 @@
             </div>
         </div>
 
-        <script src="/dist/index.js"></script>
+        <script src="/dist/index-4803d31dcc.js"></script>
     </body>
 </html>
