--- a/public_html/venue.html
+++ b/public_html/venue.html
@@ -5,22 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Save The Date | Dan and Christin</title>
+        <title>Dan and Christin</title>
 
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Lato:300,700" rel="stylesheet">
-        <link rel="stylesheet" href="/dist/main.css">
+        <link rel="stylesheet" href="/dist/main-938ed80c17.css">
     </head>
-    <body class="save-the-date">
+    <body class="venue">
         <div class="left">  
-
         </div>
+
         <div class="right">
             <div class="container">
                 <header>
                     <h1>Dan and Christin</h1>
                     <ul class="menu">
                         <li>
-                            <a class="active" href="/">Save The Date</a>
+                            <a href="/">Save The Date</a>
                         </li>
                         <li>
                             <a href="wedding-day-info.html">Wedding Day Info</a>
@@ -29,7 +29,7 @@
                             <a href="hotels.html">Hotels</a>
                         </li>
                         <li>
-                            <a href="venue.html">Venue</a>
+                            <a class="active" href="venue.html">Venue</a>
                         </li>
                     </ul>
                     <div class="clearfix"></div>
@@ -40,13 +40,19 @@
 
 
                 <main>
-                    <h2>Save the Date</h2>
-                    <h3>May 6th, 2017</h3>
-                    <h4>Woodstock, Illinois</h4>
+                    <h2>The Venue</h2>
+                    
+                    <p>
+                        We will be celebrating our marriage at <a href="http://soulfulprairies.com/">Soulful Prairies</a> in Woodstock, IL. 
+                        This location is a native conservation land, with fish and wildlife preserved ponds, 
+                        and restored wetlands and prairies. Due to the owners passion for conservation, we 
+                        respectfully request all guests adhere to their strict recycling policy.
+                    </p>
                 </main>
             </div>
         </div>
 
-        <script src="/dist/index.js"></script>
+        <script src="/dist/index-4803d31dcc.js"></script>
     </body>
 </html>
+
