--- a/assets/html/hotels.html
+++ b/assets/html/hotels.html
@@ -49,8 +49,8 @@
 
                     <p>
                         We’ve reserved a room block at a rate of $129 a night. 
-                        Make sure to give them group code
-                        <strong>1137E9</strong> when reserving your room! 
+                        Make sure to mention "Doyle-Wolf Wedding" or use group code
+                        <code>1137E9</code> when reserving your room! 
                     </p>
 
                     <p>
