--- a/assets/html/venue.html
+++ b/assets/html/venue.html
@@ -45,7 +45,10 @@
                     <p>
                         We will be celebrating our marriage at <a href="http://soulfulprairies.com/">Soulful Prairies</a> in Woodstock, IL. 
                         This location is a native conservation land, with fish and wildlife preserved ponds, 
-                        and restored wetlands and prairies. Due to the owners passion for conservation, we 
+                        and restored wetlands and prairies. 
+                    </p>
+                    <p>
+                        Due to the owners passion for conservation, we 
                         respectfully request all guests adhere to their strict recycling policy.
                     </p>
                 </main>
