--- a/assets/html/venue.html
+++ b/assets/html/venue.html
@@ -7,6 +7,9 @@
 
         <title>Dan and Christin</title>
 
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Lato:300,700" rel="stylesheet">
         <link rel="stylesheet" href="/dist/main.css">
     </head>
