--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -7,8 +7,8 @@
 
         <title>Save The Date | Dan and Christin</title>
 
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="https://danandchristin.com/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="https://danandchristin.com/favicon.ico" type="image/x-icon">
 
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Lato:300,700" rel="stylesheet">
         <link rel="stylesheet" href="/dist/main.css">
