--- a/assets/html/wedding-day-info.html
+++ b/assets/html/wedding-day-info.html
@@ -14,7 +14,17 @@
         <link rel="stylesheet" href="/dist/main.css">
     </head>
     <body class="wedding-day-info">
-        <div class="left">  
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-86649725-1', 'auto');
+            ga('send', 'pageview');
+
+        </script>
+        <div class="left">
 
         </div>
         <div class="right">
@@ -53,14 +63,14 @@
 
                     <h2>Attire</h2>
                     <p>
-                        Due to the location, we do not recommend heels for women. 
+                        Due to the location, we do not recommend heels for women.
                         Jackets are not required for men. Please no jeans, or similar casual wear.
                     </p>
 
                     <h2>Please Note</h2>
 
                     <p>
-                        Due to limited capacity at our venue, our celebration 
+                        Due to limited capacity at our venue, our celebration
                         will be adults only.
                     </p>
                 </main>
