--- a/assets/html/hotels.html
+++ b/assets/html/hotels.html
@@ -78,13 +78,14 @@
                     </p>
 
                     <p>
-                        We’ve reserved a room block at a rate of $129 a night. 
-                        Make sure to mention "Doyle-Wolf Wedding" or use group code
+                        We&apos;ve reserved a room block at a rate of $129 a night. 
+                        Make sure to mention &rdquot;Doyle-Wolf Wedding&ldquot; or use group code
                         <code>1137E9</code> when reserving your room! 
                     </p>
 
                     <p>
-                        Call (800) 709&ndash;1323 and press 2 to reserve your room.
+                        You&apos;ll need to call (800) 709&ndash;1323 and press 2 to reserve your room.
+			They will not accept our discount code for online registrations.
                     </p>
 
                     <p>
