changed copy on hotels page

--- a/assets/html/hotels.html
+++ b/assets/html/hotels.html
@@ -84,8 +84,8 @@
                     </p>
 
                     <p>
-                        You&apos;ll need to call (800) 709&ndash;1323 and press 2 to reserve your room.
-			They will not accept our discount code for online registrations.
+                        You will need to call (800) 709&ndash;1323 and press 2 to reserve your room.
+			The code will not work for online reservations.
                     </p>
 
                     <p>
