--- a/assets/html/hotels.html
+++ b/assets/html/hotels.html
@@ -79,7 +79,7 @@
 
                     <p>
                         We&apos;ve reserved a room block at a rate of $129 a night. 
-                        Make sure to mention &rdquot;Doyle-Wolf Wedding&ldquot; or use group code
+                        Make sure to mention &rdquo;Doyle-Wolf Wedding&ldquo; or use group code
                         <code>1137E9</code> when reserving your room! 
                     </p>
 
